// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for hasLikeButton: false, hasSlottedAnchor: false, hasPriceOriginal: false, hasDescription: false, aspectRatio: "9/16" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: var(--p-spacing-fluid-xs) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--p-radius-2xl) !important;
  overflow: hidden !important;
}
.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 9/16;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--p-radius-3xl);
  padding: var(--p-spacing-fluid-sm);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.anchor {
  position: absolute;
  inset: 0;
  z-index: 1;
  border-radius: var(--p-radius-3xl);
}
.anchor:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.header {
  display: flex;
  gap: var(--p-spacing-fluid-sm);
  justify-content: space-between;
  align-items: flex-start;
}
.image {
  aspect-ratio: 8/9;
  margin: var(--p-spacing-fluid-sm) auto var(--p-spacing-fluid-xs);
  overflow: hidden;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
}
@media(min-width:760px) {
  .image {
    padding: 0 var(--p-spacing-fluid-md);
  }
}

@media(forced-colors:active) {
  .anchor {
    forced-color-adjust: none;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .anchor:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: false, hasPriceOriginal: false, hasDescription: false, aspectRatio: "3/4" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: var(--p-spacing-fluid-xs) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--p-radius-2xl) !important;
  overflow: hidden !important;
}
.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--p-radius-3xl);
  padding: var(--p-spacing-fluid-sm);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.anchor {
  position: absolute;
  inset: 0;
  z-index: 1;
  border-radius: var(--p-radius-3xl);
}
.anchor:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.header {
  display: flex;
  gap: var(--p-spacing-fluid-sm);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: var(--p-spacing-fluid-sm) auto var(--p-spacing-fluid-xs);
  overflow: hidden;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
}
@media(min-width:760px) {
  .image {
    padding: 0 var(--p-spacing-fluid-md);
  }
}

@media(forced-colors:active) {
  .anchor {
    forced-color-adjust: none;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .anchor:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: false, hasPriceOriginal: false, hasDescription: false, aspectRatio: "3/4" 2`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: var(--p-spacing-fluid-xs) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--p-radius-2xl) !important;
  overflow: hidden !important;
}
.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--p-radius-3xl);
  padding: var(--p-spacing-fluid-sm);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.anchor {
  position: absolute;
  inset: 0;
  z-index: 1;
  border-radius: var(--p-radius-3xl);
}
.anchor:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.header {
  display: flex;
  gap: var(--p-spacing-fluid-sm);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: var(--p-spacing-fluid-sm) auto var(--p-spacing-fluid-xs);
  overflow: hidden;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
}
@media(min-width:760px) {
  .image {
    padding: 0 var(--p-spacing-fluid-md);
  }
}

@media(forced-colors:active) {
  .anchor {
    forced-color-adjust: none;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .anchor:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: false, hasPriceOriginal: false, hasDescription: false, aspectRatio: {"base":"3/4","xs":"9/16"} 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: var(--p-spacing-fluid-xs) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--p-radius-2xl) !important;
  overflow: hidden !important;
}
.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--p-radius-3xl);
  padding: var(--p-spacing-fluid-sm);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.anchor {
  position: absolute;
  inset: 0;
  z-index: 1;
  border-radius: var(--p-radius-3xl);
}
.anchor:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.header {
  display: flex;
  gap: var(--p-spacing-fluid-sm);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: var(--p-spacing-fluid-sm) auto var(--p-spacing-fluid-xs);
  overflow: hidden;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
}
@media(min-width:480px) {
  .root {
    aspect-ratio: 9/16;
  }
}

@media(min-width:760px) {
  .image {
    padding: 0 var(--p-spacing-fluid-md);
  }
}

@media(forced-colors:active) {
  .anchor {
    forced-color-adjust: none;
    box-shadow: inset 0 0 0 2px LinkText;
  }
  .anchor:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: true, hasPriceOriginal: false, hasDescription: false, aspectRatio: "3/4" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted(a[slot='anchor']) {
  position: absolute !important;
  inset: 0 !important;
  z-index: 1 !important;
  border-radius: var(--p-radius-3xl) !important;
  text-indent: -999999px !important;
}
::slotted(a[slot='anchor']:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: var(--p-spacing-fluid-xs) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--p-radius-2xl) !important;
  overflow: hidden !important;
}
@media(forced-colors:active) {
  ::slotted(a[slot='anchor']) {
    forced-color-adjust: none !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(a[slot='anchor']:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--p-radius-3xl);
  padding: var(--p-spacing-fluid-sm);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.header {
  display: flex;
  gap: var(--p-spacing-fluid-sm);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: var(--p-spacing-fluid-sm) auto var(--p-spacing-fluid-xs);
  overflow: hidden;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
}
@media(min-width:760px) {
  .image {
    padding: 0 var(--p-spacing-fluid-md);
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: true, hasPriceOriginal: true, hasDescription: false, aspectRatio: "3/4" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted(a[slot='anchor']) {
  position: absolute !important;
  inset: 0 !important;
  z-index: 1 !important;
  border-radius: var(--p-radius-3xl) !important;
  text-indent: -999999px !important;
}
::slotted(a[slot='anchor']:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: var(--p-spacing-fluid-xs) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--p-radius-2xl) !important;
  overflow: hidden !important;
}
s {
  color: var(--p-color-contrast-medium);
}
@media(forced-colors:active) {
  ::slotted(a[slot='anchor']) {
    forced-color-adjust: none !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(a[slot='anchor']:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--p-radius-3xl);
  padding: var(--p-spacing-fluid-sm);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.header {
  display: flex;
  gap: var(--p-spacing-fluid-sm);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: var(--p-spacing-fluid-sm) auto var(--p-spacing-fluid-xs);
  overflow: hidden;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: var(--p-spacing-fluid-xs);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:760px) {
  .image {
    padding: 0 var(--p-spacing-fluid-md);
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}"
`;

exports[`getComponentCss() > should return correct css for hasLikeButton: true, hasSlottedAnchor: true, hasPriceOriginal: true, hasDescription: true, aspectRatio: "3/4" 1`] = `
":host {
  display: block;
  position: relative;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot[name="header"] {
  display: block;
}
::slotted(a[slot='anchor']) {
  position: absolute !important;
  inset: 0 !important;
  z-index: 1 !important;
  border-radius: var(--p-radius-3xl) !important;
  text-indent: -999999px !important;
}
::slotted(a[slot='anchor']:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
::slotted([slot="header"]) {
  display: flex !important;
  flex-wrap: wrap !important;
  gap: var(--p-spacing-fluid-xs) !important;
}
::slotted(:is(img,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
  border-radius: var(--p-radius-2xl) !important;
  overflow: hidden !important;
}
s {
  color: var(--p-color-contrast-medium);
}
@media(forced-colors:active) {
  ::slotted(a[slot='anchor']) {
    forced-color-adjust: none !important;
    box-shadow: inset 0 0 0 2px LinkText !important;
  }
  ::slotted(a[slot='anchor']:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: flex;
  flex-direction: column;
  aspect-ratio: 3/4;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--p-radius-3xl);
  padding: var(--p-spacing-fluid-sm);
  color: var(--p-color-primary);
  background-color: var(--p-color-surface);
}
.header {
  display: flex;
  gap: var(--p-spacing-fluid-sm);
  justify-content: space-between;
  align-items: flex-start;
}
.button {
  position: relative;
  z-index: 2;
}
.image {
  aspect-ratio: 8/9;
  margin: var(--p-spacing-fluid-sm) auto var(--p-spacing-fluid-xs);
  overflow: hidden;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
.wrapper {
  display: flex;
  flex-direction: column;
  margin: auto;
  text-align: center;
}
.heading {
  margin: 0 0 2px;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.price {
  margin: 0;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: var(--p-spacing-fluid-xs);
}
.description {
  margin: 0;
  font: var(--p-font-weight-normal) var(--p-typescale-2xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-high);
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:760px) {
  .image {
    padding: 0 var(--p-spacing-fluid-md);
  }
}

@media(hover:hover) {
  .root:hover .image {
    transform: scale3d(1.05,1.05,1.05);
  }
}"
`;
